# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.0
 info:
   title: Seabnb Management API
   version: '1.0'
@@ -6,7 +6,9 @@ info:
     API for managing the Seabnb web application.
 servers:
 - url: http://localhost:3000
+
 paths:
+
   /boats:
     get:
       tags:
@@ -46,10 +48,46 @@ paths:
         '404':
           description: Boat not found.
           
+    post:
+      tags:
+        - boats
+      description: Create a new boat.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Boat'
+      responses:
+        '201':
+          description: Boat successfully created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Boat'
+        '400':
+          description: Bad request. Invalid boat data.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
+        '500':
+          description: Internal server error.
+
     patch:
       tags:
         - boats
       description: Update information about a specific boat.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -70,35 +108,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Boat'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Boat not found.
-          
-    post:
-      tags:
-        - boats
-      description: Create a new boat.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Boat'
-      responses:
-        '201':
-          description: Boat successfully created.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Boat'
-        '400':
-          description: Bad request. Invalid boat data.
-        '500':
-          description: Internal server error.
           
     delete:
       tags:
         - boats
       description: Delete a specific boat.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -109,6 +131,10 @@ paths:
       responses:
         '204':
           description: Boat successfully deleted.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Boat not found.
           
@@ -118,6 +144,8 @@ paths:
       tags:
         - users
       description: Get a list of all users.
+      # security:
+      #   - bearerAuth: []
       responses:
         '200':
           description: Successfully retrieved the list of users.
@@ -127,6 +155,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: No users found.
           
@@ -135,6 +167,8 @@ paths:
       tags:
         - users
       description: Get information about a specific user.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -149,6 +183,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: User not found.
           
@@ -156,6 +194,12 @@ paths:
       tags:
         - users
       description: Create a new user.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
       requestBody:
         required: true
         content:
@@ -178,6 +222,8 @@ paths:
       tags:
         - users
       description: Update information about a specific user.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -198,6 +244,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: User not found.
           
@@ -205,6 +255,8 @@ paths:
       tags:
         - users
       description: Delete a specific user.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -215,6 +267,10 @@ paths:
       responses:
         '204':
           description: User successfully deleted.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: User not found.
           
@@ -224,6 +280,8 @@ paths:
       tags:
         - reservations
       description: Get a list of all reservations.
+      # security:
+      #   - bearerAuth: []
       responses:
         '200':
           description: Successfully retrieved the list of reservations.
@@ -233,6 +291,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Reservation'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: No reservations found.
           
@@ -241,6 +303,8 @@ paths:
       tags:
         - reservations
       description: Get information about a specific reservation.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -255,6 +319,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Reservation'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Reservation not found.
           
@@ -262,6 +330,14 @@ paths:
       tags:
         - reservations
       description: Create a new reservation.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
       requestBody:
         required: true
         content:
@@ -277,6 +353,10 @@ paths:
                 $ref: '#/components/schemas/Reservation'
         '400':
           description: Bad request. Invalid reservation data.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '500':
           description: Internal server error.
           
@@ -284,6 +364,8 @@ paths:
       tags:
         - reservations
       description: Update information about a specific reservation.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -304,6 +386,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Reservation'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Reservation not found.
           
@@ -311,6 +397,8 @@ paths:
       tags:
         - reservations
       description: Delete a specific reservation.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -321,8 +409,153 @@ paths:
       responses:
         '204':
           description: Reservation successfully deleted.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Reservation not found.
+
+  /reservationsHistory:
+    get:
+      tags:
+        - reservationsHistory
+      description: Get a list of all reservationsHistory.
+      # security:
+      #   - bearerAuth: []
+      responses:
+        '200':
+          description: Successfully retrieved the list of reservationsHistory.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ReservationHistory'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
+        '404':
+          description: No reservationsHistory found.
+          
+  /reservationsHistory/{id}:
+    get:
+      tags:
+        - reservationsHistory
+      description: Get information about a specific reservationHistory.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: ID of the reservationHistory to retrieve.
+      responses:
+        '200':
+          description: Successfully retrieved reservationHistory information.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReservationHistory'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
+        '404':
+          description: ReservationHistory not found.
+          
+    post:
+      tags:
+        - reservationsHistory
+      description: Create a new reservationHistory.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReservationHistory'
+      responses:
+        '201':
+          description: ReservationHistory successfully created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReservationHistory'
+        '400':
+          description: Bad request. Invalid reservationHistory data.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
+        '500':
+          description: Internal server error.
+          
+    patch:
+      tags:
+        - reservationsHistory
+      description: Update information about a specific reservationHistory.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: ID of the reservationHistory to update.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReservationHistory'
+      responses:
+        '200':
+          description: ReservationHistory information updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReservationHistory'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
+        '404':
+          description: ReservationHistory not found.
+          
+    delete:
+      tags:
+        - reservationsHistory
+      description: Delete a specific reservationHistory.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: ID of the reservationHistory to delete.
+      responses:
+        '204':
+          description: ReservationHistory successfully deleted.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
+        '404':
+          description: ReservationHistory not found.
           
           
   /comments:
@@ -330,6 +563,8 @@ paths:
       tags:
         - comments
       description: Get a list of all comments.
+      # security:
+      #   - bearerAuth: []
       responses:
         '200':
           description: Successfully retrieved the list of comments.
@@ -339,6 +574,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Comment'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: No comments found.
     
@@ -361,6 +600,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Comment not found.
           
@@ -368,6 +611,14 @@ paths:
       tags:
         - comments
       description: Create a new comment.
+      # security:
+      #   - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
       requestBody:
         required: true
         content:
@@ -383,6 +634,10 @@ paths:
                 $ref: '#/components/schemas/Comment'
         '400':
           description: Bad request. Invalid comment data.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '500':
           description: Internal server error.
 
@@ -390,6 +645,8 @@ paths:
       tags:
         - comments
       description: Update information about a specific comment.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -410,6 +667,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Comment not found.
           
@@ -417,6 +678,8 @@ paths:
       tags:
         - comments
       description: Delete a specific comment.
+      # security:
+      #   - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -427,11 +690,22 @@ paths:
       responses:
         '204':
           description: Comment successfully deleted.
+        '401':
+          description: Not authenticated or invalid token
+        '403':
+          description: Access token does not have the required scope
         '404':
           description: Comment not found.
           
           
 components:
+
+  # securitySchemes:
+  #   bearerAuth:            
+  #     type: http
+  #     scheme: bearer
+  #     bearerFormat: JWT
+
   schemas:
     Boat:
       type: object
@@ -480,8 +754,8 @@ components:
           type: string
         firstName:
           type: string
-        age:
-          type: number
+        birthDate:
+          type: string
         emailAddress:
           type: string
         phoneNumber:
@@ -496,6 +770,8 @@ components:
           type: string
         profilePicture:
           type: string
+        spokenLanguages:
+          type: object
         status:
           type: string
         isOwner:
@@ -508,8 +784,8 @@ components:
           type: number
         startingDate:
           type: string
-        duration:
-          type: number
+        endDate:
+          type: string
         ppn:
           type: number
         note:
@@ -519,6 +795,16 @@ components:
         idBoat:
           type: number
 
+    ReservationHistory:
+      type: object
+      properties:
+        id:
+          type: number
+        idUser:
+          type: number
+        idReservation:
+          type: number
+
     Comment:
       type: object
       properties:
@@ -526,9 +812,5 @@ components:
           type: number
         content:
           type: string
-        dates:
-          type: object
-        idClient:
-          type: number
         idReservation:
           type: number
